fix: add flex-wrap to filters container for better responsiveness

--- a/src/styles/admin/page.module.css
+++ b/src/styles/admin/page.module.css
@@ -15,6 +15,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    flex-wrap: wrap;
 }
 
 .main_name_container svg {
